:bug: fixed ordering problem on mobile

--- a/src/styles/components/_WeOrder.scss
+++ b/src/styles/components/_WeOrder.scss
@@ -1,13 +1,27 @@
 .WeOrder {
   height: 100vh;
 
+  &__button {
+    @extend .button;
+    position: fixed !important;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    text-align: center;
+  }
+
   &__frame {
     position: relative;
     top: 0;
     left: 0;
     width: 100%;
-    min-height: 100vh;
-    width: 100%;
-    padding-bottom: rem-calc(70);
+    height: 100%;
+    padding-bottom: rem-calc(113);
+
+    @include bp(lg) {
+      padding-bottom: 0;
+      padding-top: rem-calc(50);
+    }
   }
 }
